# tauri-plugin-social-auth

./: .gitignore  Cargo.toml  PUBLISHING.md  README.MD  build.rs
android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro  settings.gradle
android/src/main/java/app/tauri/socialauth/: SocialAuthPlugin.kt
android/src/main/java/app/tauri/socialauth/google/: GoogleAuthPlugin.kt
android/src/main/java/app/tauri/socialauth/vk/: VkAuthPlugin.kt
android/src/main/java/app/tauri/socialauth/yandex/: YandexAuthPlugin.kt
ios/: Package.swift
ios/AppAuthIOSCompatibility/: AppAuthIOSCompatibility.m
ios/AppAuthIOSCompatibility/include/: AppAuthIOSCompatibility.h
ios/Sources/: GoogleAuthPlugin.swift  SocialAuthBridge.swift  SocialAuthPlugin.swift  VkAuthPlugin.swift  YandexAuthPlugin.swift
ios/VKCaptchaSDKStub/: Package.swift
ios/VKCaptchaSDKStub/Sources/VKCaptchaSDK/: VKCaptchaSDK.swift
macos/: Package.swift
macos/Sources/SocialAuthMacOS/: SocialAuthMacOS.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: apple_sign_in.toml  google_sign_in.toml  signIn.toml  vk_sign_in.toml  yandex_sign_in.toml
permissions/schemas/: schema.json
src/: lib.rs  macos.rs  models.rs
