[package]
name = "tauri-plugin-social-auth"
version = "1.0.0"
edition = "2021"
rust-version = "1.77.2"
build = "build.rs"
links = "tauri-plugin-social-auth"
description = "Social auth mobile plugin for Tauri"
license = "MIT OR Apache-2.0"
repository = "https://github.com/uvarov-frontend/tauri-plugin-social-auth"
homepage = "https://github.com/uvarov-frontend/tauri-plugin-social-auth"
documentation = "https://docs.rs/tauri-plugin-social-auth"
readme = "README.MD"
keywords = ["tauri", "plugin", "auth", "oauth", "mobile"]
categories = ["authentication"]

[lib]
name = "tauri_plugin_social_auth"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2.10.2", features = [] }

[build-dependencies]
tauri-plugin = { version = "2.5.3", features = ["build"] }
